--- a/Assignment1/assignment1.html
+++ b/Assignment1/assignment1.html
@@ -13,7 +13,7 @@
 	<h1>
 		CSC 309: Web Application
 	</h1>
-	<blockquote>  <em>Coding is Fun</em> </blockquote>
+	<blockquote>  <em>Coding is Fun and love</em> </blockquote>
 	
 
 	<div>
